# AIBiotechMLPortfolio

./: .gitignore  README.md  env.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: Home.py
app/pages/: 1_Biomarker_Classifier.py  2_Volcano_Plot_Studio.py  3_Model_Card.py  4_Drug_Response_Predictor.py  5_scRNA_Cluster_Viewer.py  6_Enrichment_Explorer.py  7_Pathway_Highlighter.py
data/: degs_sample.csv  enrichment_sets.csv
scripts/: train.py  train_drug.py
service/: api.py  api_drug.py
tests/: test_smoke.py  test_train_and_api.py  test_train_drug_and_api.py
